Fixed on mobile

--- a/style.css
+++ b/style.css
@@ -46,13 +46,16 @@ header p {
   text-shadow: 1px 1px 3px rgba(0,0,0,0.6);
 }
 
-nav {
+.nav { 
   display: flex;
   justify-content: center;
   background: #22c55e;
 }
+.nav .menu {
+  display: flex;
+}
 
-nav a {
+.nav a {
   color: white;
   text-decoration: none;
   padding: 1rem 1.5rem;
@@ -60,9 +63,27 @@ nav a {
   transition: background 0.2s ease;
 }
 
-nav a:hover {
+.nav a:hover {
   background: #2563eb;
 }
+
+.nav .icon {
+  display:none
+}
+
+@media (max-width: 980px) {
+  .nav .menu {
+    display:none
+  }
+  .nav .icon {
+    display:flex
+  }
+}
+
+@media (max-width: 980px){
+.nav .menu-grid {
+  display:grid
+}}
 
 section {
   padding: 3rem 1rem;
